<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPA</string>
    <string name="gpa_calculator">GPA Calculator</string>
    <string name="action_settings">Action Settings</string>
    <string name="calculate">Calculate GPA</string>
    <string name="add_class">Add Class</string>
    <string name="delete_class">Delete Class</string>
	<string name="view_classes">View Classes</string>
    <string name="class_grade">Class Grade:</string>
    <string name="class_hours">Class Hours:</string>
    <string name="class_name">Class Name:</string>
    <string name="courses">Courses:</string>
    <string name="cancel">Cancel</string>
  	<string name="add">Add</string>
    <string name="back">Back</string>
    <string name="classes">Classes</string>
    <string name="list">list</string>
    <string name="developer_name">Hunter Houston</string>
    
    
  	
    

</resources>
