<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"   
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/gpaCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gpa_calculator"
        android:textSize="30sp"
        android:layout_marginBottom="40dp" />

	<Button
        android:id="@+id/addClass"
        android:layout_marginBottom="5dp"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/add_class" />	
    	
	<Button
        android:id="@+id/viewClasses"
        android:layout_marginBottom="50dp"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/view_classes" />	
    	
    <Button
        android:id="@+id/calculate"
        android:layout_marginBottom="30dp"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/calculate" />
    


</LinearLayout>
